Fix: emoji spacing in host search

--- a/house_of_refuge/frontend/src/styles/resources.scss
+++ b/house_of_refuge/frontend/src/styles/resources.scss
@@ -37,6 +37,11 @@ a {
   }
 }
 
+.col-head-display-wrapper,
+.col-head-emoji {
+  margin-right: 0.5em;
+}
+
 .col {
   padding: 2px;
   width: 250px;
